echo-server-oauth2-proxy/manifests.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2019-01-03T23:28:25Z"
    labels:
      run: echo-server
    name: echo-server
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      run: echo-server
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    labels:
      run: echo-server
    name: echo-server
  spec:
    replicas: 1
    selector:
      matchLabels:
        run: echo-server
    template:
      metadata:
        creationTimestamp: null
        labels:
          run: echo-server
      spec:
        containers:
        - image: jamesw/http-echo-server
          imagePullPolicy: Always
          name: echo-server
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
